# air-quality-missing-data-imputation

./: .dvcignore  .env  .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: README.md
configs/legacy/hydra/: eval.yaml  train.yaml
configs/pipeline/: params.yaml
data/: .gitignore  original.dvc  raw.dvc
data/original/: E403.csv  E405.csv  E407.csv  E409.csv  E410.csv  E411.csv  E414.csv  E417.csv  E420.csv  E423.csv  E801.csv  E802.csv
data/raw/: E403.csv  E404.csv  E405.csv  E407.csv  E408.csv  E409.csv  E410.csv  E411.csv  E412.csv  E413.csv  E414.csv  E415.csv  E417.csv  E418.csv  E420.csv  E421.csv  E423.csv  E801.csv  E802.csv  E803.csv  E804.csv
notebooks/: dopolnitev_in_analiza_missing.ipynb  preverjanje_urnih_zapisov.ipynb  zdruzitev_raw_postaj.ipynb
reports/: completion_inserted_rows_summary.csv  hourly_completeness_summary.csv  hourly_missing_hours_detail.csv  missing_by_column_overall.csv  missing_by_station_column.csv
reports/metrics/: .gitignore
reports/metrics_electricity/: model_eval_metrics.json  summary_by_feature_for_dvc_plots.csv
reports/model_eval_electricity/: summary_overall.csv
reports/plots/: .gitignore
src/air_quality_imputer/: exceptions.py  logger.py
src/air_quality_imputer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/air_quality_imputer/data/: __init__.py  dataset.py  electricity_dataset.py
src/air_quality_imputer/models/: __init__.py  base.py  (+6 more)
tests/: test_dvc_smoke.py  test_electricity_dataset.py  test_evaluate_models.py  test_mlflow_utils.py  test_prepare_data.py  test_train_models.py  test_transformer_gated_fusion.py  test_transformer_imputer.py
(+28 files in other folders)
