[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-imputer"
version = "0.1.0"
description = "Air quality imputation experiments with transformer-based models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "omegaconf>=2.3",
  "torch",
  "joblib",
  "pypots",
  "dagshub",
  "mlflow",
  "dvc[s3]",
]

[project.scripts]
aqi-prepare = "air_quality_imputer.pipeline.prepare_data:main"
aqi-train-models = "air_quality_imputer.pipeline.train_models:main"
aqi-evaluate-models = "air_quality_imputer.pipeline.evaluate_models:main"
aqi-download-electricity = "air_quality_imputer.data.electricity_dataset:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["air_quality_imputer*"]
